--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
+          args: --timeout=10m
       - name: hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
