--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @SaladTechnologies/admins @SaladTechnologies/virtual-kubelet-maintainers lucklypriyansh-2
+* @SaladTechnologies/admins @SaladTechnologies/virtual-kubelet-maintainers @lucklypriyansh-2
 
 # Administrators must approve changes to the code owners.
 CODEOWNERS @SaladTechnologies/admins
