--- a/sample-pod.yaml
+++ b/sample-pod.yaml
@@ -1,9 +1,28 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: sample-pod
+  name: demo-pod  # Assuming you'd want a name for the Pod
 spec:
-  nodeName: saladcloud-cx9wpxmz
   containers:
-    - name: nginx
-      image: nginx
+    - name: my-container
+      image: my-image
+      command: ["/path/to/your-command"]  # Replace with your command
+      args: ["arg1", "arg2"]  # Replace with your arguments
+      env:
+        - name: ENV_VAR_NAME  # Replace with your environment variable name
+          value: "Env Var Value"  # Replace with the value of your environment variable
+      resources:
+        requests:
+          memory: "64Mi"
+          cpu: "250m"
+        limits:
+          memory: "128Mi"
+          cpu: "500m"
+  tolerations:
+    - key: virtual-kubelet.io/provider
+      operator: Equal
+      value: saladCloud
+      effect: NoSchedule
+  nodeSelector:
+    kubernetes.io/role: agent
+    type: virtual-kubelet
