Add changes to support container environment variables

--- a/sample-deployment.yaml
+++ b/sample-deployment.yaml
@@ -14,6 +14,11 @@ spec:
     spec:
       containers:
         - name: my-container
+          env:
+            - name: test
+              value: test
+            - name: another
+              value: env
           image: docker.io/heygordian/node-app:latest
           resources:
             requests:
