--- a/sample-deployment.yaml
+++ b/sample-deployment.yaml
@@ -2,6 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-deployment
+  annotations:
+    salad.com/country-codes: "ca,us,mx"
+    salad.com/gpu-classes: "GTX 1070 (8 GB), ffc51032-64d2-4df3-855a-f3a649895c0f"
+    salad.com/networking-protocol: "http"
+    salad.com/networking-port: "80"
+    salad.com/networking-auth: "true"
 spec:
   replicas: 1
   selector:
@@ -29,6 +35,7 @@ spec:
               cpu: "1"
       nodeSelector:
         kubernetes.io/role: agent
+      restartPolicy: Always
       tolerations:
         - key: "virtual-kubelet.io/provider"
           operator: "Equal"
