--- a/charts/virtual-kubelet/Chart.yaml
+++ b/charts/virtual-kubelet/Chart.yaml
@@ -1,4 +1,12 @@
 apiVersion: v2
 description: a Helm chart to install virtual kubelet with Azure provider in an AKS cluster.
-name: salad-virtual-kubelet
-version: 1.0.0
+maintainers:
+- email: guofei@microsoft.com
+  name: Fei Guo
+- email: heba.elayoty@microsoft.com
+  name: Heba Elayoty
+name: virtual-kubelet-azure-aci
+sources:
+- https://github.com/virtual-kubelet/azure-aci
+version: 1.6.0
+
