--- a/charts/virtual-kubelet/templates/clusterrolebinding.yaml
+++ b/charts/virtual-kubelet/templates/clusterrolebinding.yaml
@@ -2,11 +2,11 @@
 apiVersion: "rbac.authorization.k8s.io/{{ .Values.rbac.apiVersion }}"
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "salad.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
-{{ include "salad.labels" . | indent 2 }}
+  name: {{ template "vk.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
+{{ include "vk.labels" . | indent 2 }}
 subjects:
 - kind: ServiceAccount
-  name: {{ template "salad.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
+  name: {{ template "vk.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
   namespace: {{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
