--- a/charts/virtual-kubelet/templates/serviceaccount.yaml
+++ b/charts/virtual-kubelet/templates/serviceaccount.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: {{ .Values.namespace }}
-  name: {{ template "salad.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
-{{ include "salad.labels" . | indent 2 }}
+  name: {{ template "vk.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
+{{ include "vk.labels" . | indent 2 }}
 {{ end }}
