--- a/charts/virtual-kubelet/values.yaml
+++ b/charts/virtual-kubelet/values.yaml
@@ -1,83 +1,25 @@
 image:
-  #  secretName: virtual-kubelet-aci-acr
   repository: us.gcr.io
   name: salad-app/salad-virtual-kubelet
   tag: 1.0.1
   pullPolicy: IfNotPresent
 
-#initImage:
-#  repository: mcr.microsoft.com
-#  name: oss/virtual-kubelet/init-validation
-#  initTag: 0.2.0
-#  pullPolicy: Always
+logLevel: debug
 
-namespace: vk-azure-aci
+namespace: virtual-kubelet-saladcloud
 
-nodeName: "virtual-node-aci-linux-helm"
-nodeOsType: "Linux"
-monitoredNamespace: "vk-azure-aci"
-apiserverCert:
-apiserverKey:
-logLevel:
-disableVerifyClients: false
-enableAuthenticationTokenWebhook: true
+nodename: virtual-kubelet-saladcloud-node
+
+rbac:
+  install: true
+  serviceAccountName: virtual-kubelet-saladcloud
+  apiVersion: v1
+  roleRef: cluster-admin
+
+salad:
+  apiKey: acf8b837-9ef9-4782-805a-7b9628cfa4d7
+  organizationName: salad
+  projectName: prod
 
 taint:
   enabled: true
-  key: virtual-kubelet.io/provider
-  value: "{{ .Values.provider }}"
-  ## `effect` must be `NoSchedule`, `PreferNoSchedule` or `NoExecute`.
-  effect: NoSchedule
-
-trace:
-  exporter: ""
-  serviceName: "{{ .Values.nodeName }}"
-  sampleRate: 0
-
-providers:
-  azure:
-    enableRealTimeMetrics: true
-    ## Set to true if deploying to Azure Kubernetes Service (AKS), otherwise false
-    targetAKS: true
-    clientId:
-    clientKey:
-    tenantId:
-    subscriptionId:
-    managedIdentityID:
-    ## `aciResourceGroup` and `aciRegion` are required only for non-AKS deployments
-    aciResourceGroup:
-    aciRegion:
-    masterUri:
-    loganalytics:
-      enabled: false
-      workspaceId:
-      workspaceKey:
-      clusterResourceId:
-    vnet:
-      enabled: false
-      vnetResourceGroup:
-      vnetName:
-      subnetName: virtual-node-aci
-      ## If subnet already created on vnet, don't pass subnetCidr if it doesn't match the existing one.
-      ## If cluster subnet has a different range, please specify its value in clusterCidr
-      subnetCidr: 10.241.0.0/16
-      # clusterCidr defaults to 10.240.0.0/16 if not specified
-      clusterCidr:
-      # kubeDnsIp defaults to 10.0.0.10 if not specified
-      kubeDnsIp: 10.0.0.10
-
-#provider: azure
-
-## Install Default RBAC roles and bindings
-rbac:
-  install: true
-  serviceAccountName: virtual-kubelet-helm
-  ## RBAC api version
-  apiVersion: v1
-  ## Cluster role reference
-  roleRef: cluster-admin
-
-Salad:
-  ApiKey: "acf8b837-9ef9-4782-805a-7b9628cfa4d7"
-  OrganizationName: "Salad"
-  ProjectName: "Salad-Virtual-Node"
