--- a/charts/virtual-kubelet/templates/serviceaccount.yaml
+++ b/charts/virtual-kubelet/templates/serviceaccount.yaml
@@ -1,8 +1,21 @@
-{{ if .Values.rbac.install }}
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: {{ .Values.namespace }}
-  name: {{ template "vk.fullname" . }}-{{ .Values.rbac.serviceAccountName }}
-{{ include "vk.labels" . | indent 2 }}
+  {{- if or .Values.additionalAnnotations .Values.serviceAccount.annotations }}
+  annotations:
+    {{- with .Values.additionalAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.serviceAccount.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  {{- end }}
+  labels:
+    {{- include "virtual-kubelet-saladcloud.labels" . | nindent 4 }}
+    {{- with .Values.additionalLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  name: {{ .Values.serviceAccount.name }}
+  namespace: {{ .Release.Namespace }}
 {{ end }}
