--- a/charts/virtual-kubelet/templates/serviceaccount.yaml
+++ b/charts/virtual-kubelet/templates/serviceaccount.yaml
@@ -2,20 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- if or .Values.additionalAnnotations .Values.serviceAccount.annotations }}
+  {{- with .Values.serviceAccount.annotations }}
   annotations:
-    {{- with .Values.additionalAnnotations }}
     {{- toYaml . | nindent 4 }}
-    {{- end }}
-    {{- with .Values.serviceAccount.annotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
   {{- end }}
   labels:
     {{- include "virtual-kubelet-saladcloud.labels" . | nindent 4 }}
-    {{- with .Values.additionalLabels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-  name: {{ .Values.serviceAccount.name }}
+  name: {{ include "virtual-kubelet-saladcloud.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 {{ end }}
