--- a/charts/virtual-kubelet/Chart.yaml
+++ b/charts/virtual-kubelet/Chart.yaml
@@ -1,18 +1,21 @@
 apiVersion: v2
-description: Deploy containers to SaladCloud from your Kubernetes cluster using a virtual node
+description: Deploy containers to SaladCloud from your Kubernetes cluster using a virtual node.
 home: https://github.com/SaladTechnologies/virtual-kubelet-saladcloud
 icon: https://raw.githubusercontent.com/SaladTechnologies/virtual-kubelet-saladcloud/main/images/salad-logo-500x500.png
 keywords:
   - gpu
+  - kubelet
   - kubernetes
   - salad
   - saladcloud
   - virtual-kubelet
   - virtual-kubelet-provider
+  - vk
 kubeVersion: ">=v1.26.0-0"
 maintainers:
-  - email: kyle@salad.com
-    name: Kyle Dodson
+  - email: dev@salad.com
+    name: Salad Chefs
+    url: https://salad.com/
 name: virtual-kubelet-saladcloud
 sources:
   - https://github.com/SaladTechnologies/virtual-kubelet-saladcloud
