--- a/charts/virtual-kubelet/values.yaml
+++ b/charts/virtual-kubelet/values.yaml
@@ -1,33 +1,79 @@
-additionalAnnotations: {}
-
+# -- The collection of additional labels applied to all resources.
 additionalLabels: {}
 
-image:
-  repository: virtual-kubelet-saladcloud
-  tag: 1.0.0
-  pullPolicy: IfNotPresent
+# -- When set to a non-empty value, overrides the `virtual-kubelet-saladcloud.fullName` value in the `ClusterRoleBinding` resource.
+clusterRoleNameOverride: ""
+
+# -- When set to a non-empty value, overrides the `virtual-kubelet-saladcloud.fullName` value.
+fullNameOverride: ""
+
+# -- The list of `Secret` names containing the registry credentials.
+imagePullSecrets: []
+
+# -- The SaladCloud Virtual Kubelet Provider name.
+name: virtual-kubelet
+
+# -- When set to a non-empty value, overrides the `virtual-kubelet-saladcloud.name` value.
+nameOverride: ""
 
 provider:
-  name: saladcloud-virtual-kubelet
+  # -- The collection of annotations applied to the `Deployment` resource.
+  deploymentAnnotations: {}
+
+  image:
+    # -- The SaladCloud Virtual Kubelet Provider image digest. When set to a non-empty value, the image is pulled by digest (ignore the tag value).
+    digest: ""
+
+    # -- The `imagePullPolicy` for the SaladCloud Virtual Kubelet Provider image. May be `IfNotPresent`, `Always`, or `Never`.
+    pullPolicy: IfNotPresent
+
+    # -- The SaladCloud Virtual Kubelet Provider image repository URI.
+    repository: ghcr.io/saladtechnologies/virtual-kubelet-saladcloud
+
+    # -- The SaladCloud Virtual Kubelet Provider image tag.
+    tag: ""
+
+  # -- The log level. May be `error`, `warn`, `info`, `debug`, or `trace`.
   logLevel: warn
+
+  # -- The SaladCloud Virtual Kubelet Provider node name.
   nodename: saladcloud-node
+
+  # -- The collection of labels used to assign the SaladCloud Virtual Kubelet Provider pod.
+  nodeSelector: {}
+
+  # -- The collection of annotations applied to the `Pod` resources created by the deployment.
+  podAnnotations: {}
+
+  # -- The flag indicating whether the SaladCloud Virtual Kubelet Provider node is tainted.
   taintEnabled: true
-  additionalAnnotations: {}
-  additionalLabels: {}
-
-salad:
-  apiKey: acf8b837-9ef9-4782-805a-7b9628cfa4d7
-  organizationName: salad
-  projectName: prod
-
-serviceAccount:
-  create: true
-  name: saladcloud-virtual-kubelet
-  additionalAnnotations: {}
-  additionalLabels: {}
 
 rbac:
+  # -- The flag indicating whether the `ClusterRoleBinding` resource should be created.
   create: true
-  roleRef: cluster-admin
-  additionalAnnotations: {}
-  additionalLabels: {}
+
+  # -- The collection of annotations applied to the `ClusterRoleBinding` resource.
+  annotations: {}
+
+  # -- The name of the `ClusterRole` resource.
+  clusterRoleName: cluster-admin
+
+salad:
+  # -- The SaladCloud API key.
+  apiKey: ""
+
+  # -- The SaladCloud organization name.
+  organizationName: ""
+
+  # -- The SaladCloud project name.
+  projectName: ""
+
+serviceAccount:
+  # -- The flag indicating whether the `ServiceAccount` resources should be created.
+  create: true
+
+  # -- The collection of annotations applied to the `ServiceAccount` resource.
+  annotations: {}
+
+# -- When set to a non-empty value, overrides the `virtual-kubelet-saladcloud.fullName` value in the `ServiceAccount` resource.
+serviceAccountNameOverride: ""
