Improve Docker image build

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,18 @@
+.git/
+.github/
+.vscode/
+bin/
+charts/
+docker/
+images/
+openapi/
 **/.gitignore
 **/*Dockerfile*
 .dockerignore
 .editorconfig
 .gitattributes
+.gitignore
 .prettierrc.yaml
-LICENSE
-NOTICE
+Makefile
 README.md
+*.yaml
