Add build-image Makefile target and build version support
* Use the commit for BUILD_VERSION since we do not tag the repo
* Use the commit date rather than build date to provide a bit of ordering
  to the builds

Signed-off-by: Dean Troyer <dean.troyer@salad.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,13 +2,14 @@
 
 FROM golang:1.21.3-alpine3.18 AS build
 WORKDIR /app
+ARG VERSION_FLAGS=-ldflags=
 
 COPY go.mod go.sum ./
 RUN go mod download && \
     go mod verify
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /app/bin/virtual-kubelet ./cmd/virtual-kubelet/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build "${VERSION_FLAGS}" -o /app/bin/virtual-kubelet ./cmd/virtual-kubelet/main.go
 
 FROM scratch AS final
 
