Demo: Requests/limits are strings
Signed-off-by: Dean Troyer <dean.troyer@salad.com>

--- a/demo/qr.yaml
+++ b/demo/qr.yaml
@@ -27,10 +27,10 @@ spec:
           name: qr-code
           resources:
             requests:
-              cpu: 2
+              cpu: "2"
               memory: 8Gi
             limits:
-              cpu: 2
+              cpu: "2"
               memory: 8Gi
           env:
             - name: HOST
