--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM golang:1.23.6-alpine3.21 AS build
+FROM golang:1.24.0-alpine3.21 AS build
 WORKDIR /app
 ARG VERSION_FLAGS=-ldflags=
 
@@ -9,7 +9,7 @@ RUN go mod download && \
     go mod verify
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build "${VERSION_FLAGS}" -o /app/bin/virtual-kubelet ./cmd/virtual-kubelet/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build "${VERSION_FLAGS}" -o ./bin/virtual-kubelet ./cmd/virtual-kubelet/main.go
 
 FROM scratch AS final
 
