--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN go mod download && \
     go mod verify
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build "${VERSION_FLAGS}" -o ./bin/virtual-kubelet ./cmd/virtual-kubelet/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build "${VERSION_FLAGS}" -o ./bin/virtual-kubelet-saladcloud ./cmd/virtual-kubelet-saladcloud/main.go
 
 FROM scratch AS final
 
@@ -17,6 +17,6 @@ COPY --from=build /etc/ssl/certs /etc/ssl/certs
 COPY --from=build /etc/ssl/cert.pem /etc/ssl/cert.pem
 COPY LICENSE /LICENSE
 COPY NOTICE /NOTICE
-COPY --from=build --chown=root:root /app/bin/virtual-kubelet /usr/bin/virtual-kubelet
+COPY --from=build --chown=root:root /app/bin/virtual-kubelet-saladcloud /usr/bin/virtual-kubelet-saladcloud
 
-ENTRYPOINT ["/usr/bin/virtual-kubelet"]
+ENTRYPOINT ["/usr/bin/virtual-kubelet-saladcloud"]
